--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,16 @@ html {
 	 background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 	 overflow: hidden;
 }
+
+#myVideo {
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	min-width: 100%;
+	min-height: 100%;
+	z-index: -1;
+}
+
  #title {
 	 position: absolute;
 	 top: 50%;
@@ -23,3 +33,93 @@ html {
 	 -webkit-text-fill-color: transparent;
 }
  
+.main-container{
+    font-family: 'Be Vietnam Pro', sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 32px;
+    margin-bottom: 30px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.profiles-container {
+    display: flex;
+    gap: 20px;
+}
+
+.profile {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.profile img {
+    box-shadow: black 0px 0px 20px;
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+
+.profile-name {
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.profile:hover {
+    transform: scale(1.05);
+}
+
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.back-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    fill: white;
+}
+
+@media (max-width: 600px) {
+	.profiles-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	gap: 20px;
+	}
+	
+	.profile {
+	width: 100%;
+	height: 100%;
+	}
+}
