--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-	background: url("https://i.imgur.com/M5iNocO.jpg");
+	background-image: url("https://i.imgur.com/M5iNocO.jpg");
 } 
 
  #title {
