--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
+* {
+	margin: 0;
+}
+
 html {
 	 height: 100%;
 	 background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-	 overflow: hidden;
 }
 
 body {
 	background-image: url("https://i.imgur.com/M5iNocO.jpg");
 	background-size: cover;
+	overflow-y: auto;
 } 
 
  #title {
