--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@ body {
 	background-image: radial-gradient(500px 200px at 50% 0, #131f33 20%, rgba(19, 30, 49, 0) 100%);
 	background-size: cover;
 	overflow-y: auto;
+	display: flex;
+  flex-direction: column;
 } 
 
  #title {
