--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,113 @@
 * {
-	margin: 0;
+  margin: 0;
 }
 
 html {
-	 height: 100%;
-	 background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  height: 100%;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 
 body {
   background: rgb(16, 21, 29);
-	background-image: radial-gradient(500px 200px at 50% 0, #131f33 20%, rgba(19, 30, 49, 0) 100%);
-	background-size: cover;
-	overflow-y: auto;
-	display: flex;
+  background-image: radial-gradient(
+    500px 200px at 50% 0,
+    #131f33 20%,
+    rgba(19, 30, 49, 0) 100%
+  );
+  background-size: cover;
+  overflow-y: auto;
+  display: flex;
   flex-direction: column;
-} 
+}
 
- #title {
-	 position: absolute;
-	 top: 50%;
-	 left: 0;
-	 right: 0;
-	 color: #fff;
-	 text-align: center;
-	 font-family: 'lato', sans-serif;
-	 font-weight: 300;
-	 font-size: 50px;
-	 letter-spacing: 10px;
-	 margin-top: -60px;
-	 padding-left: 10px;
+#title {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  color: #fff;
+  text-align: center;
+  font-family: "lato", sans-serif;
+  font-weight: 300;
+  font-size: 50px;
+  letter-spacing: 10px;
+  margin-top: -60px;
+  padding-left: 10px;
 }
- #title span {
-	 background: -webkit-linear-gradient(white, #38495a);
-	 -webkit-background-clip: text;
-	 -webkit-text-fill-color: transparent;
+#title span {
+  background: -webkit-linear-gradient(white, #38495a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
- 
-.main-container{
-    font-family: 'Be Vietnam Pro', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    color: white;
+
+.main-container {
+  font-family: "Be Vietnam Pro", sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: white;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h1 {
-    font-size: 32px;
-    margin-bottom: 30px;
-    text-align: center;
-    text-transform: uppercase;
+  font-size: 32px;
+  margin-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .profiles-container {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .profile {
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
 
 .profile img {
-    box-shadow: black 0px 0px 20px;
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    object-fit: cover;
+  box-shadow: black 0px 0px 20px;
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  object-fit: cover;
 }
 
 .profile-name {
-    font-size: 16px;
-    margin-top: 10px;
+  font-size: 16px;
+  margin-top: 10px;
 }
 
 .profile:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 @media (max-width: 600px) {
-	.profiles-container {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	gap: 20px;
-	}
-	
-	.profile {
-	width: 100%;
-	height: 100%;
-	}
+  .profiles-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  .profile {
+    width: 100%;
+    height: 100%;
+  }
 }
